--- a/build.yml
+++ b/build.yml
@@ -27,4 +27,4 @@ wm:
   #sdk: "MC3000c50b (ARMV4I)"
   #sdk: "Windows Mobile 6.5.3 Professional DTK (ARMV4I)"
 
-extensions: ["rhoconnect-client"]
+extensions: ["rhoconnect-client", "genCallbackTests"]
